main.css
*{
    font-family: playfair display;
    scroll-behavior: smooth;
    background-color: #FFFFFF;
    
}
.hello{
    color: #333366;
}
#name{
    border: 5px solid #333366;
    font-family: 'Open Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 8px;
    padding: 10px;
    margin-bottom: 0;
    position: absolute;
    z-index: 1;
    background-color: #F3EFEA;
    /* align-content: auto; */
    /* justify-content: space-around; */
}
body{
    font-family: "Playfair Display", serif;
}

.about{
    width: 100vw;
    height: 100vh;
}

.personalSection{
    display: flex;
    flex-direction: row;
    /* align-self: auto; */
}

.personalBlog{
    width: 70%;
    margin-left: 3em;
    /* position: relative; */
}
.personalPhoto{
    justify-content: center;
    background-color: #F3EFEA;
}
.contact{
    background-color: #F3EFEA;
    border: 5px solid #333333;
}
.AP{
    background-position: 50% 50%;
    background-repeat: no-repeat;
    border-radius: 60%;
    width: 250px;
    height: 250px;
    object-fit: cover;
    /* border: 4px solid #be8f1f; */
    margin: .5em 1em 0 1em;
    opacity: .9;
}

.aboutpg1{
    font-size: 1em;
}
.socialMedia{
    display: flex;
    flex-direction: column;
    justify-content:center;
    background-color: #F3EFEA;
}

.projects{
    width: 100vw;
    height: 100vh;
}

i{
    font-size: 2em;
    padding-top: .3em;
    background-color: #F3EFEA;
    color: #333366;
}

#resBtn{
    color: white;
    background-color: #333333;
    padding: .65em;
    margin-bottom: 1em;
    font-size: .75em;
}
#resBtn:hover{
    background-color: #333366;
}

i:hover{
    color: #333333;
    
}

i:hover, #resBtn:hover{
    transform: scale(1.1);
}
.hdrsec{
    display: flex;
    justify-content: center;
    z-index: 10;
}
.pjt{
    display: flex;
    justify-content: center;
}
#hdr{
    /* text-align: center; */
    border: 5px solid #333366;
    font-family: 'Open Sans', sans-serif;
    text-transform: uppercase;
    letter-spacing: 8px;
    padding: 5px;
    background-color: #F3EFEA;
}
.nav{
    margin: 2em;
}

.navLink{
    display: flex;
}

.bannerImg{
    width: 100vw;
    height: 35vh;
    object-fit: cover;
    z-index: 0;
    margin-top: 70px;
    margin-bottom: 20px;
}

.grid-container, .btn-cont {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }
  .grid-item, .btn-item {
    padding-top: 10px;
    background-color: #F3EFEA;
    /* font-size: 25px; */
    /* text-align: center; */
  }

  #GHRight, #resRight{
    text-align: right;
    padding-right: 15px;
  }
  #GHRight{
      padding-right: 28px;
  }
  #IN{
      padding-left: 15px;
  }

  .projects{
      display:flex;
  }
  /* .project3{
    display: flex;
    flex-direction: column;
    align-self: center;
  } */
  .fileShare{
      width: 600px;
      height: 350px;
  }
  .p3txt{
      color:white;
      background-color: #333333;
      text-align: center;
      font-size: 2em;
  }
  .html{
      border-bottom: 15px solid #F3EFEA !important;
      width: 50px;
      padding-left: .5em;
      border: 1px solid grey;
  }

  @media (max-width:1150px) and (min-width:950px) {
    .AP{
        width: 250px;
        height: 250px;
    }
  }

  @media (max-width:950px) and (min-width:780px) {
    .AP{
        width: 200px;
        height: 200px;
    }
  }

  @media screen and (max-width:780px) {
    .personalSection{
        /* display: flex; */
        flex-direction: column;
        /* text-align: center; */
    }
  
    .contact{
        width: 70vw;
    }
    .personalBlog{
        width: 85%;
        margin: 0;
        /* text-align: center; */
        /* position: relative; */
    }
    .hello{
        font-size: 1.75em;
    }

    .fileShare{
        width:350px;
        height: 200px;
    }
    #name{
        margin-top: .5em;
        font-size: 1.5em;
    }
    
  }

